# cogniflow

./: .directory  .flake8  .gitignore  CONTRIBUTING.md  CogniFlow.desktop  Makefile  PROFILING.txt  README.md  TODO.md  avvia_cogniflow.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_footer_features.py  test_human_detection.py  test_project_name_input.py  test_refactored_qml.py  test_ui_toggle.py  test_vlm_integration.py  vlm_integration_test_report.txt
.github/workflows/: ci.yml
assistente_dsa/: .env.example  0_HELPER_DEPENDENCY.py  CogniFLow.code-workspace  Dockerfile  README_REFACTORING.md  README_SALVATAGGIO_CARICAMENTO.md  __init__.py  __main__.py  main_00_launcher.py  main_01_Aircraft.py  main_01_Aircraft_backup.py  main_01_Aircraft_backup2.py  main_01_Aircraft_backup3.py  main_01_Aircraft_backup4.py  main_01_Aircraft_backup5.py  main_03_configurazione_e_opzioni.py  main_launcher_light.py  test_import.py  test_qml_integration.py  test_refactored_structure.py  test_simple_pensierini.py  test_webcam_gesture.py
assistente_dsa/Artificial_Intelligence/: __init__.py
assistente_dsa/Autenticazione_e_Accesso/: __init__.py  app_launcher.py  auth_flow.py  auth_manager.py  auth_module.py  dependency_check.py  face_auth.py  gui_components.py  login_dialog.py  password_reset_dialog.py  security_utils.py  simple_auth_manager.py  test_auth_setup.py  test_password_reset.py  test_password_reset_fixed.py  test_security.py  user_auth_manager.py
assistente_dsa/Save/: __init__.py
assistente_dsa/UI/: README_QT_DESIGNER.md  README_REFACTORING.md  auth_dialog.py  draggable_text_widget.py  main_interface.qml  main_window_refactored.py  qml_launcher.py  resources.qrc  settings_dialog.py  test_interface.qml  test_launcher.py  user_friendly_errors.py  virtual_keyboard.py
assistente_dsa/Vecchio_progetto/: UNICO.py
assistente_dsa/controllers/: cogniflow_controller.py
assistente_dsa/core/: admin_setup_dialog.py  advanced_encryption.py  app_launcher.py  cache_manager.py  circuit_breaker.py  compliance_engine.py  config_module.py  crypto_module.py  dependency_checker.py  difficulty_observer.py  document_tools.py  download_manager.py  gui_module.py  health_monitor.py  input_validator.py  lazy_loader.py  login_dialog.py  performance_module.py  performance_monitor.py  security_dashboard.py  security_module.py  security_monitor.py  simple_auth.py  system_checks_module.py  theme_selector.py  threat_detection.py  user_auth_manager.py
assistente_dsa/debug_logs/: ui_metrics.jsonl
assistente_dsa/models/: project_model.py  settings_model.py
assistente_dsa/services/: ai_service.py  media_service.py  mediapipe_bridge.py  mediapipe_client.py  ocr_service.py  (+3 more)
backup_unused_files/: qml_launcher.py.backup  test_project_name_input.py  test_robustness.py  ui_metrics.jsonl
cogniflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mediapipe_service/: mediapipe_processor.py  requirements.txt
(+99 files in other folders)
